--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "import/prefer-default-export": "off",
+    "react/prop-types": "off",
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
   }
 }
