--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
+    "react-youtube": "^7.13.1",
     "sass": "^1.39.2",
     "web-vitals": "^1.0.1"
   },
